feat: implement basic auth to crawler
